# migui

./: settings.gradle.kts
ImGuiView/: build.gradle.kts
ImGuiView/src/: dex_data.h
ImGuiView/src/androidTest/java/com/imguiview/: ExampleInstrumentedTest.java
ImGuiView/src/main/java/com/imgui/: ImGuiView.java
ImGuiView/src/test/java/com/imguiview/: ExampleUnitTest.java
app/: build.gradle.kts
app/src/androidTest/java/com/imgui/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  pch.cpp  pch.h
app/src/main/cpp/src/: NativeImGui.h  dex_data.h  elf_util.cpp  elf_util.h  imgui_view.cpp  imgui_view.h  logging.h  tools.h
app/src/main/cpp/src/external-lib/ImGui/: imgui.cpp  imgui.h  imgui_impl_android.cpp  imgui_impl_android.h  imgui_impl_opengl3.cpp  imgui_internal.h
app/src/main/java/com/imgui/: Hooker.java  ImClassLoader.java  InstrumentationHook.java  MainActivity.java  MainActivity2.java  Replacement.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/imgui/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
